gcc-14.2.0/gcc/testsuite/gdc.test/compilable/imports/udamodule2a.d
version https://git-lfs.github.com/spec/v1
oid sha256:568b847f123913cdd85a016b92d144153d8a667f42c2bb0129b1211c7748e8d2
size 55
